Move compatibility layer out of exclusion